# cell_studio

./: .gitignore  DEPLOYMENT.md  render.yaml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  engine_adapter.py  experiment_runner.py  main.py  models.py  security.py  study_runner.py  worker.py  worker_main.py
backend/app/ai/: __init__.py  copilot.py  prompts.py  provider.py  schemas.py  sse.py
backend/app/pharmacology/: __init__.py  analysis.py  catalog.py
backend/app/research/: __init__.py  analysis.py  confidence.py  designer.py  hypotheses.py  knowledge.py  notebook.py  objectives.py  patterns.py
backend/app/routers/: ai.py  auth.py  experiments.py  pharmacology.py  projects.py  research.py  simulations.py  ws.py
backend/app/schemas/: auth.py  design.py  experiment.py  project.py  research.py  simulation.py
backend/app/services/: __init__.py  auth_service.py  experiment_metrics.py  experiment_service.py  project_service.py  research_service.py  simulation_service.py
backend/migrations/: env.py
backend/migrations/versions/: 06561179e5f8_initial_schema.py  a1b2c3d4e5f6_experiment_lab.py  c3d4e5f6a7b8_ai_research_studies.py  d4e5f6a7b8c9_realtime_drug_injection.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_deploy.py  test_engine_adapter.py  test_experiments.py  test_pharmacology.py  test_projects_designs.py  test_research.py  test_simulation_control.py  test_simulation_flow.py  test_websocket.py
docs/: ARCHITECTURE.md
engine/: README.md  pyproject.toml
engine/tests/: __init__.py  generate_golden.py  test_cell_state.py  test_compartments.py  test_death.py  test_delta.py  test_division.py  test_environment.py  test_events.py  test_evolution.py  test_expression.py  test_fba.py  test_genotype.py  test_golden_trajectory.py  test_lifecycle.py  test_membrane.py  test_metabolism.py  test_mutation_effects.py  test_petri.py  test_pharmacology.py  test_population.py  test_replication.py  test_scenario_growth.py  test_scheduler.py  test_serialization.py  test_signalling.py  test_spatial.py  test_toy_module.py  test_transport.py
engine/tests/golden/: toy_trajectory.json
engine/vcs_engine/: __init__.py
engine/vcs_engine/biology/: __init__.py  compartments.py  config.py  death.py  division.py  environment.py  expression.py  fba.py  genome.py  genotype.py  membrane.py  metabolism.py  naming.py  replication.py  scenario.py  signalling.py  spatial.py  transport.py
engine/vcs_engine/kernel/: __init__.py  module.py  scheduler.py
engine/vcs_engine/modules/: __init__.py  toy.py
engine/vcs_engine/petri/: __init__.py  dish.py
engine/vcs_engine/pharmacology/: __init__.py  library.py  module.py
engine/vcs_engine/population/: __init__.py  population.py
engine/vcs_engine/state/: __init__.py  cell_state.py  delta.py  events.py  serialization.py
frontend/: README.md  index.html  package-lock.json  package.json  (+1 more)
(+121 files in other folders)
